Fallback to basic file attributes if cun.nio.fs cannot be used
Changed the logic of handling exceptions based on code review