@@ -52,6 +52,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Supplier;
 import java.util.jar.JarFile;
 
 import org.glassfish.api.admin.ServerEnvironment;
@@ -423,11 +424,17 @@ public class AppLibClassLoaderServiceImpl implements EventListener {
                 }
                 method.setAccessible(true);
                 field.setAccessible(true);
-            } catch (ReflectiveOperationException | InaccessibleObjectException e) {
+            } catch (InaccessibleObjectException e) {
+                LOG.log(WARNING, () -> "Could not access specialized 'sun.nio.fs' APIs. Try opening the package with the JVM argument '--add-opens=java.base/sun.nio.fs=ALL-UNNAMED' to the JVM options. We will now fallback to using basic file attributes. Error: " + e.getMessage());
                 method = null;
                 field = null;
             } catch (Exception e) {
-                LOG.log(WARNING, () -> "Could not initialize sun.nio.fs. We will fallback to basic file attributes. Error: " + e.getMessage(), e);
+                Supplier<String> messageSupplier = () -> "Could not initialize sun.nio.fs. We will now fallback to using basic file attributes. Error: " + e.getMessage();
+                if (e instanceof ReflectiveOperationException) {
+                    LOG.log(WARNING, messageSupplier);
+                } else {
+                    LOG.log(WARNING, messageSupplier, e);
+                }
                 method = null;
                 field = null;
             }
